<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round_finish_title">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="15dp"
                android:text="@string/dialog_back_message_end"
                android:textColor="@color/appTxtColor"
                android:textSize="14dp"/>

        </RelativeLayout>

        <com.google.android.gms.ads.NativeExpressAdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/appTxtColor"
            ads:adSize="280x250"
            ads:adUnitId="@string/banner_ad_native_finish_id"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/mCancelBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_round_finish_cancel">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="15dp"
                    android:text="@string/dialog_alert_no"
                    android:textColor="@color/appBgColor"
                    android:textSize="14dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/mConfirmBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_round_finish_confirm">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="15dp"
                    android:text="@string/dialog_alert_yes"
                    android:textColor="@color/appTxtColor"
                    android:textSize="14dp"/>

            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
