<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3000000">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#FFFFFFFF"
        android:minWidth="200dp"
        android:orientation="vertical">

        <!-- Title -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#FFFFFFFF"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_alert"/>

        </LinearLayout>

        <!-- Content -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:gravity="center_vertical|left"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="최신 업데이트가 존재합니다."
                android:layout_marginBottom="20dp"
                android:textColor="#FF000000"
                android:textSize="11dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="한층 개선된 YCEngine 최신 버전이\n출시되었습니다."
                android:textColor="#99000000"
                android:textSize="11dp"/>

        </LinearLayout>

        <!-- Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#FFFFFFFF"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivUpdateSupportUpdateBtn"
                android:layout_width="52dp"
                android:layout_height="20dp"
                android:layout_marginStart="24dp"
                android:src="@drawable/bt_update"
                android:contentDescription="@string/app_name"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnUpdateSupportCancel"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:paddingEnd="12dp"
                android:gravity="center_vertical|right"
                android:text="@string/dialog_alert_no"
                android:textColor="#FF00afd5"
                android:textSize="11dp"/>

            <Button
                android:id="@+id/btnUpdateSupportSee"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:paddingEnd="24dp"
                android:background="@null"
                android:gravity="center_vertical|right"
                android:text="@string/dialog_alert_see"
                android:textColor="#FF00afd5"
                android:textSize="11dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>